# voxtn-mailclient

./: .env.example  .gitignore  CLAUDE.md  README.md  package-lock.json  package.json
apps/web/: .env.example  .gitignore  CLAUDE.md  package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/lib/: dns-records.ts  permissions.ts  sanitize-html.ts  tenant.ts  useTrackingEvents.ts
docs/decisions/: DCR-NM-003-container-networking.md  DCR-NM-004-smtp-creds-in-request.md  DCR-NM-008-calcom-allowed-hostnames.md
infra/: docker-compose.yml
scripts/: test-billing.sh  test-campaigns.sh  test-compliance.sh  test-crm-context.sh  test-ownership-transfer.sh  test-send-cancel.sh  test-shared-inboxes.sh  test-signatures.sh  test-tenants.sh
services/ai-bridge/: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  pyproject.toml
services/ai-bridge/migrations/: 001_signatures.sql  002_tracking_events.sql  003_billing_usage.sql  004_tenants.sql
services/ai-bridge/src/nexamail_ai/: auth.py  billing.py  billing_routes.py  compose_ai.py  config.py  crm.py  db.py  draft.py  gateway.py  main.py  reading_ai.py  realtime.py  signatures.py  tenants.py  tracking.py  triage.py  utils.py  voice.py
services/imap-bridge/: .dockerignore  CLAUDE.md  Dockerfile  package-lock.json  package.json  tsconfig.json
services/imap-bridge/src/: db.ts  (+10 more)
skills/: mail-ai.skill.md  mail-calendar.skill.md  mail-compliance.skill.md  mail-crm.skill.md  mail-imap.skill.md
workers/tracking/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  wrangler.toml
(+78 files in other folders)
